--- a/r2s2_movement/CMakeLists.txt
+++ b/r2s2_movement/CMakeLists.txt
@@ -5,6 +5,10 @@ add_compile_options(-std=c++11)
 
 find_package(catkin REQUIRED
     COMPONENTS
+    	std_msgs
+    	message_generation
+    	sensor_msgs
+    	geometry_msgs
         moveit_core
         moveit_visual_tools
         moveit_ros_planning
